--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,3 @@
-/* app css stylesheet */
-
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
 
 /* line 1, ../../app/styles/_menu.scss */
@@ -197,7 +195,7 @@ body {
   color: white;
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
-  background: url(/images/pizza.jpg);
+  background: url(/img/pizza.jpg);
 }
 
 /* line 83, ../../app/styles/main.scss */
