--- a/app/partials/reservations.html
+++ b/app/partials/reservations.html
@@ -1,30 +1,39 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
-            <div class="form form-inline">
+        <div class="col-lg-4">
+            <h1>Create a Reservation</h1>
+
+            <div class="form">
                 <div class="form-group">
                     <input type="text" ng-model="vm.name" class="form-control" placeholder="Name" />
                 </div>
                 <div class="form-group">
                     <input type="number" ng-model="vm.qty" class="form-control" placeholder="Quantity" />
                 </div>
+            </div>
+        </div>
+        <div class="col-lg-8">
+            <h3>Reservation List</h3>
+            <ul>
+                <li ng-repeat="reserve in vm.reservations">
+                    {{reserve.name}} for {{reserve.qty}} at {{reserve.time | date: 'short' }}
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-4">
+            <div class="form"></div>
                 <div class="form-group">
-                    <input type="date" ng-model="vm.date" class="form-control" placeholder="Date" />
-                    <input type="time" ng-model="vm.time" class="form-control" placeholder="Time" />
+                    <a2-date-picker date="vm.date"></a2-date-picker>
+                </div>
+                <div class="form-group">
+                    <input a2-time-picker time="vm.time" start="09:00" type="text" placeholder="Time" />
                 </div>
                 <div class="form-group">
                     <button class="btn btn-primary" ng-click="vm.createReservation()">Create</button>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <ul>
-                <li ng-repeat="reserve in vm.reservations">
-                    {{reserve.name}} for {{reserve.qty}} at {{reserve.time}}
-                </li>
-            </ul>
-        </div>    
     </div>
 </div>
