--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -11,7 +11,10 @@
     
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-multiselect/css/bootstrap-multiselect.css" />
-    
+    <link href="bower_components/kendo-ui/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
+    <link href="bower_components/kendo-ui/styles/kendo.bootstrap.min.css" rel="stylesheet" />
+    <link href="bower_components/kendo-ui/styles/kendo.default.min.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="css/app.css">
     
   </head>
@@ -73,6 +76,9 @@
     <![endif]-->
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/kendo-ui/js/kendo.core.min.js"></script>
+    <script src="bower_components/kendo-ui/js/kendo.ui.core.min.js"></script>
+    <script src="bower_components/kendo-ui/js/kendo.datetimepicker.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -86,6 +92,7 @@
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
 </body>
 </html>
