--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -5,7 +5,7 @@
         The best Pizza in town!
     </p>
 
-    <p><a class="btn btn-lg btn-danger" ng-href="#/menu">Order Now!<span class="glyphicon glyphicon-ok"></span></a></p>
+    <p><a class="btn btn-lg btn-danger" ng-href="#/menu">See Our Menu! <span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
