--- a/app/partials/reservations.html
+++ b/app/partials/reservations.html
@@ -1,39 +1,63 @@
-<div class="container">
-    <div class="row">
-        <div class="col-lg-4">
-            <h1>Create a Reservation</h1>
+<div class="jumbotron">
+    <h1>Reservations</h1>
+</div>
 
-            <div class="form">
-                <div class="form-group">
-                    <input type="text" ng-model="vm.name" class="form-control" placeholder="Name" />
+
+<div class="row">
+    <div class="col-md-4 create-reservation">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Create a Reservation
+            </div>
+            
+            <div class="panel-body">
+                <div ng-if="vm.submitted && reservations.$invalid" class="alert alert-danger">
+                    <div ng-if="reservations.qty.$error.number" >
+                        Please enter a number for your reservation.
+                    </div>
+                    <div ng-if="reservations.$error.required">
+                        Please enter all required fields
+                    </div>
                 </div>
-                <div class="form-group">
-                    <input type="number" ng-model="vm.qty" class="form-control" placeholder="Quantity" />
-                </div>
+
+                <form name="reservations" class="form" ng-class="{ 'validate-form': vm.submitted }" 
+                            novalidate ng-submit="vm.createReservation()">
+                    <div class="form-group">
+                        <input name="name" type="text" ng-model="vm.name" class="form-control" placeholder="Name" required />
+                    </div>
+                    <div class="form-group">
+                        <input name="qty" type="number" ng-model="vm.qty" class="form-control" placeholder="Quantity" required />
+                    </div>
+                    <div class="form-group">
+                        <input type="text" a2-date-picker ng-model="vm.date" placeholder="Date" required />
+                    </div>
+                    <div class="form-group">
+                        <input type="text" a2-time-picker ng-model="vm.time" start="09:00" placeholder="Time" required />
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Create</button>
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="col-lg-8">
-            <h3>Reservation List</h3>
-            <ul>
-                <li ng-repeat="reserve in vm.reservations">
-                    {{reserve.name}} for {{reserve.qty}} at {{reserve.time | date: 'short' }}
+        
+    </div>
+    <div class="col-md-8">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Reservation List
+            </div>
+
+            <ul class="list-group">
+                <li class="list-group-item" ng-if="!vm.reservations.length">
+                    No reservations
+                </li>
+                <li class="list-group-item" ng-repeat="reserve in vm.reservations">
+                    <b>{{reserve.name}}</b> on {{reserve.time | date: 'fullDate' }} at {{reserve.time | date: 'shortTime' }}
+                    <span class="badge">{{reserve.qty}}</span>
                 </li>
             </ul>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-4">
-            <div class="form"></div>
-                <div class="form-group">
-                    <a2-date-picker date="vm.date"></a2-date-picker>
-                </div>
-                <div class="form-group">
-                    <input a2-time-picker time="vm.time" start="09:00" type="text" placeholder="Time" />
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary" ng-click="vm.createReservation()">Create</button>
-                </div>
-            </div>
-        </div>
     </div>
-</div>
+
