--- a/app/partials/directives/tppNavMenu.html
+++ b/app/partials/directives/tppNavMenu.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills pull-right" ng-click="setActive($event.target)">
+<ul class="nav nav-pills pull-right">
     <li class="active">
         <a ng-href="#/">Home</a>
     </li>
