--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -82,5 +82,6 @@
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/filters.js"></script>
 </body>
 </html>
